--- a/airline/src/css/style.css
+++ b/airline/src/css/style.css
@@ -162,6 +162,8 @@
     font-weight: 400;
     outline: none;
     transition: .5s;
+    border: none; /* Remove border */
+    background: transparent; /* Ensure background is transparent */
 }
 
 .sticky-top.navbar-light .navbar-nav .nav-link {
@@ -255,7 +257,7 @@
     }
 
     .navbar-light .navbar-nav .nav-link:hover,
-    .navbar-light .navbar-nav .nav-link.active  {
+    .navbar-light .navbar-nav .nav-link.active {
         color: var(--bs-primary) !important;
     }
 
