--- a/airline/src/css/style.css
+++ b/airline/src/css/style.css
@@ -1300,67 +1300,53 @@ html, body {
 /*** copyright end ***/
 /*** wingpoint start ***/
 .wing-points {
-    position: relative;
-    display: flex;
-    align-items: center; /* Align content vertically centered */
+   
     padding: 50px;
-    color: #000000; /* Darker text for better contrast */
-}
-
-.wing-points-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     background: linear-gradient(to right, rgba(0, 0, 0, 0.9) 50%, rgba(0, 0, 0, 0.5) 100%), 
                 url('/src/assets/img/wingpiont.jpg'); /* Add gradient overlay */
     background-size: cover; /* Ensure background image covers the whole area */
     background-position: center; /* Center the background image */
-    z-index: 1; /* Ensure image stays behind the content */
-    transition: transform 0.5s ease; /* Smooth transition for zoom effect */
-}
-
-.wing-points:hover .wing-points-image {
-    transform: scale(1.05); /* Slight zoom on hover */
+    color: #000000; /* Darker text for better contrast */
 }
 
 .wing-points-content {
-    position: relative;
-    z-index: 2; /* Bring content above the image */
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for content */
+    display: inline-block;
+    text-align: left;
+    max-width: 600px; /* Adjust the width to fit within the shaded area */
     padding: 20px;
     border-radius: 10px;
-    max-width: 600px; /* Adjust the width to fit within the shaded area */
+    
     box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow for depth */
 }
 
 .wing-points h2 {
     font-size: 2.5rem; /* Larger heading */
-    color: #e6eee8; /* Light color for heading */
+    color: #e6eee8; /* Dark green color for heading */
     margin-bottom: 20px;
 }
 
 .wing-points p {
     font-size: 1.2rem;
-    color:  #e6eee8; /* Light color for paragraph text */
+    color:  #e6eee8; /* Slightly lighter color for paragraph text */
     margin-bottom: 30px;
 }
 
 .join-now-button {
-    background-color: #202722; /* Dark background for button */
-    color: white;
-    border: none;
-    padding: 15px 30px;
-    font-size: 1.2rem; /* Larger button text */
-    cursor: pointer;
-    border-radius: 5px;
+    font-weight: 600;
+    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for background and text color */
+    padding: 0.75rem 2rem; /* Adjust padding as needed */
+    font-size: 1rem;
+    border-radius: 8px; /* Less round corners */
+    color: #fff; /* Default text color */
+    background-color: #333; /* Default button background color */
+    border: none; /* Remove border */
+    cursor: pointer; 
 }
 
 .join-now-button:hover {
-    background-color: #131413; /* Darker shade on hover */
+    background-color: #161616; /* Light black shade on hover */
+    color: #f0f0f0;/* Darker shade on hover */
 }
-
 
 
 /*** wingpoint end ***/
