--- a/airline/src/css/style.css
+++ b/airline/src/css/style.css
@@ -228,6 +228,11 @@
         display: none;
     }
 }
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active {
+    color: #e0e0e0 !important; /* Lighter color on hover */
+    background-color: rgba(255, 255, 255, 0.1); /* Subtle background change on hover */
+}
 
 
 /*** Carousel Hero Header Start ***/
