--- a/airline/src/css/style.css
+++ b/airline/src/css/style.css
@@ -1315,103 +1315,14 @@ html, body {
 }
 
 /*** copyright end ***/
-/*** wingpoint start ***/
-.wing-points {
-    padding: 50px;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.9) 50%, rgba(0, 0, 0, 0.5) 100%), 
-                url('/src/assets/img/wingpiont.jpg'); /* Add gradient overlay */
-    background-size: cover; /* Ensure background image covers the whole area */
-    background-position: center; /* Center the background image */
-    color: #e6eee8; /* Light text color for better contrast */
-    display: flex; /* Use flexbox for alignment */
-    align-items: center; /* Center content vertically */
-    justify-content: flex-start; /* Align content to the left */
-    position: relative; /* Position relative to contain absolute children */
-    min-height: 400px; /* Set a minimum height to ensure content is properly positioned */
-    transition: background-size 1.0s ease-in-out, background-position 1.0s ease-in-out; /* Longer transition for smoother effect */
-}
-.wing-points:hover {
-    background-size: 100%; /* Slightly zoom in the background image on hover */
-    background-position: center top; /* Adjust position for a more dynamic effect */
-}
-
-.wing-points-content {
-    position: relative;
-    z-index: 2; /* Bring content above the image */
-    text-align: justify;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow for depth */
-    
-}
-
-.wing-points h2 {
-    font-size: 2.5rem; /* Larger heading */
-    color: #e6eee8; /* Light color for heading */
-    margin-bottom: 20px;
-}
-
-.wing-points p {
-    font-size: 1.2rem;
-    color: #e6eee8; /* Light color for paragraph text */
-    margin-bottom: 30px;
-}
-
-.join-now-container {
-    position: absolute;
-    right: 50px; /* Position button to the right */
-    bottom: 50px; /* Position button at the bottom */
-    z-index: 3; /* Ensure the button is above other elements */
-}
-
-.join-now-button {
-    font-weight: 600;
-    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for background and text color */
-    padding: 0.75rem 2rem; /* Adjust padding as needed */
-    font-size: 1rem;
-    border-radius: 8px; /* Less round corners */
-    color: #fff; /* Default text color */
-    background-color: #333; /* Default button background color */
-    border: none; /* Remove border */
-    cursor: pointer; 
-}
-
-.join-now-button:hover {
-    background-color: #161616; /* Light black shade on hover */
-    color: #f0f0f0; /* Darker shade on hover */
-}
-
-/*** wingpoint end ***/
-
-/*** Flight Options Start ***/
-.flight-options {
-    padding: 30px;
-    border-radius: 12px;
-    background: linear-gradient(135deg, #7a8288, #070707); /* Gradient for a modern look */
-    color: #ffffff;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.flight-options h2 {
-    font-size: 28px;
-    margin-bottom: 25px;
-    color: #ffffff;
-    text-align: center;
-    font-weight: 600;
-}
-
-/*** wingpoint end ***/
 /*** WhyInfinityWings start ***/
 .why-infinity-wings-container {
     padding: 60px 30px;
     text-align: center;
-    background-color: #0d0d0d; /* Darker background for a sleek look */
-
 }
 
 .why-infinity-wings-container h2 {
     font-size: 3rem;
-    color: #f7f7f7; /* Light color for the heading */
     margin-bottom: 50px;
     text-transform: uppercase; /* Make the heading uppercase */
     letter-spacing: 2px; /* Add spacing between letters */
@@ -1436,45 +1347,71 @@ html, body {
 
 .feature-img-container {
     position: relative;
+    overflow: hidden; /* Ensure the image stays within its container */
+    width: 100%;
+    height: 0;
+    padding-bottom: 75%; /* Maintain the aspect ratio of the image */
+    border-radius: 4px;
 }
 
 .feature-img-container img {
-    width: 100%; /* Full width image */
-    height: auto;
-    border-radius: 5px; /* Match border radius to container */
-    transition: transform 0.3s ease-in-out; /* Smooth transition for zoom effect */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the image covers the container without stretching */
+    transition: transform 0.3s ease-in-out;
 }
 
 .feature-text-container {
-    background-color: #ffffff; 
-    padding: 15px;
-    border-radius: 5px; /* Slightly rounded corners */
+    background-color: var(--bs-primary); 
+    color: #f7f7f7; /* Light color for the heading */
+    padding: 20px; /* Increased padding for better spacing */
+    border-radius: 3px; /* Slightly rounded corners */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
-    position: absolute; /* Absolute positioning relative to the parent feature */
+    position: relative; 
     left: 50%; /* Center horizontally */
-    bottom: -100px; /* Position below the image */
+    bottom: 20px; /* Slightly above the bottom of the image */
     transform: translateX(-50%); /* Center the text container horizontally */
-    width: 300px; /* Adjust width as needed */
+    width: 90%; /* Adjust width to be more responsive */
     transition: transform 0.3s ease-in-out; /* Smooth transition for zoom effect */
+    text-align: left; /* Align text to the left for better readability */
+    height: 200px;
+}
+
+.feature-text-container h5 {
+    position: relative;
+    margin-bottom: 10px;
+    
+}
+
+.feature a {
+    color: #7fb9f7;
+}
+
+.feature-text-container h5::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -20px; /* Adjust the distance of the underline from the text */
+    width: 100px; /* Set a fixed width for the underline */
+    height: 3px; /* Adjust the thickness of the underline */
+    background-color: #fff; /* White underline */
 }
 
 .feature p {
-    font-size: 1.1rem;
-    color: #333333; /* Darker text color for readability on light background */
+    color: #f7f7f7; /* Darker text color for readability on light background */
     margin: 0; /* No margin needed */
+    line-height: 1.4; /* Improved line spacing */
 }
 
 .feature:hover img {
     transform: scale(1.1); /* Slight image zoom on hover */
 }
 
-.feature:hover .feature-text-container {
-    transform: translateX(-50%) scale(1.05); /* Slightly enlarge the text container on hover */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Increase shadow on hover for depth */
-}
 
-
-
+/** FLight Option Start**/
 .options-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
