--- a/airline/src/css/style.css
+++ b/airline/src/css/style.css
@@ -1581,7 +1581,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
     padding: 15px;
-    border: 1px solid #ddd;
+    border: 1px solid #2a2727;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -1739,9 +1739,11 @@ body {
     margin: 0 auto;
     padding: 30px;
     background-color: #ffffff;
+    border: #1d2022;
     border-radius: 5px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     color: #333333;
+    border: #1d2022;
 }
 
 .group-travel-form h2 {
@@ -1776,7 +1778,7 @@ body {
 .form-group textarea {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #2b2929;
     border-radius: 5px;
     font-size: 14px;
     background-color: #f8f9fa;
